--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <!--기본 설정 컬러 -->
     <color name="primaryColor">#3F51B5</color>
     <color name="gray_300">#9E9E9E</color>
+
+    <color name="todayColor">#FF5722</color>
+    <color name="selectedColor">#E64A19</color>
+
 </resources>
