[Alba & Goal] 알바 등록 프래그먼트 추가
- 알바 등록, 현황, 수정 탭 생성
- 버튼 기능 미구현 상태

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.albalog.ui.dashboard.DashboardFragment"
+        android:name="com.example.albalog.ui.albaList.ScheduleAlbaFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_schedule_alba" />
 
     <fragment
         android:id="@+id/navigation_notifications"
