UI 변경 및 개선
- 상태바 및 상단 제목 제거
- 각 셀 크기 조정
- 날짜별 글자 삽입을 위한 기반 작업 추가
- 셀의 이벤트 표시 방법 변경 검토 중
- 각 테마별 아이템 색상 초안 작성

--- a/app/src/main/res/drawable/bg_selected_rounded.xml
+++ b/app/src/main/res/drawable/bg_selected_rounded.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#E64A19"/> <!-- 파란 계열 -->
+    <solid android:color="@color/selectedColor"/>
     <corners
         android:radius="7dp" />
 </shape>
