--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -2,14 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="48dp"
     android:layout_height="48dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="4dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- 선택된 날짜 배경 (둥근네모) -->
     <View
         android:id="@+id/viewSelectedBackground"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="@drawable/bg_selected_rounded"
         android:visibility="gone"
@@ -20,16 +19,18 @@
         android:id="@+id/calendarDayText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="top|center_horizontal"
         android:textSize="14sp"
         android:textColor="@android:color/black" />
 
     <!-- 이벤트 점 표시 -->
+    <!-- TODO ui 변경하며 전체적인 변경 예정 -->
     <View
         android:id="@+id/viewDot"
         android:layout_width="6dp"
         android:layout_height="6dp"
-        android:layout_gravity="bottom|center_horizontal"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="3dp"
         android:layout_marginBottom="6dp"
         android:background="@drawable/bg_dot_circle"
         android:visibility="gone" />
