--- a/app/src/main/res/drawable/bg_dot_circle.xml
+++ b/app/src/main/res/drawable/bg_dot_circle.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#C6E2CC"/> <!-- 연초록, 필요시 다크/라이트 조정 -->
+    <solid android:color="@color/albaColor"/> <!-- item 별 색상 차등 적용 예정 -->
 </shape>
