앱 DB 및 Alba 관련 프래그먼트, 액티비티 초안 생성
- Room을 활용한 앱 DB 초안 설계
- Alba 스케줄링을 위한 프래그먼트 구조 설계
- Alba 등록을 위한 액티비티 구조 설계
- Alba 등록(regi) 및 확인(check) DB 분리

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.albalog.ui.albaList.ScheduleAlbaFragment"
+        android:name="com.example.albalog.ui.alba.ScheduleAlbaFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_schedule_alba" />
 
