--- a/app/src/main/res/layout/fragment_schedule_alba.xml
+++ b/app/src/main/res/layout/fragment_schedule_alba.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:padding="24dp"
-    tools:context=".ui.albaList.ScheduleAlbaFragment">
+    tools:context=".ui.alba.ScheduleAlbaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
